--- a/EarnAndLearn/app/views/layouts/application.html.erb
+++ b/EarnAndLearn/app/views/layouts/application.html.erb
@@ -69,7 +69,7 @@
               <div class="form-group">
                 <%= text_field(:user, :password, class: 'form-control input-lg', placeholder: "Password", type: "password") %>
               </div>
-              <%= f.submit "Log in", class: "btn btn-block signup-login-form__btn-xl btn-primary btn-large"%>
+              <%= f.submit "Log in", class: "btn btn-block signup-login-form__btn-xl btn-primary btn-large", id: "login"%>
           <% end %>
         </div>
         <div class="modal-footer">
