logged in layout nav bar UI fixes

--- a/EarnAndLearn/app/views/layouts/logged_in.erb
+++ b/EarnAndLearn/app/views/layouts/logged_in.erb
@@ -23,7 +23,7 @@
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
       </button>
-      <a class="navbar-brand home" href="/home" ><h3>logo<span style="color: #F05F40; !important;">here</span></h3></a>
+      <a class="navbar-brand home" href="/home" >    <h3>Earn<span>And</span>Learn</h3></a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -66,7 +66,7 @@
 
   <div class="footer-left">
 
-    <h3>logo<span>here</span></h3>
+    <h3>Earn<span>And</span>Learn</h3>
 
     <p class="footer-links">
       <a href="#">Home</a>
