--- a/EarnAndLearn/app/views/layouts/application.html.erb
+++ b/EarnAndLearn/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
           <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
         </button>
-        <a class="navbar-brand" href="#" style="text-transform: none; !important;">Logo Goes Here</a>
+        <a class="navbar-brand" href="#" style="text-transform: none; !important;"><h3>Earn<span>And</span>Learn</h3></a>
       </div>
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
